refactoring: back to standard log system